--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -1,6 +1,29 @@
 @import './../../../styles/variables.scss';
 
 :host {
-  @include flex(column, center, flex-start);
-  min-height: calc(100vh - 70px);
+  display: grid;
+  grid-template:
+  " hero hero " auto 
+  " lege lege " 60px
+  " left main " auto
+  / 300px auto
+  ;
+  grid-column-gap: 40px;
+  padding-bottom: 80px;
+  background-color: map-get($md-cfprimary, 50);
 }
+
+legend {
+  grid-area: lege;
+  margin-left: 40px;
+  h3 {
+    color: map-get($md-cfaccent, 300);
+  }
+}
+
+.section-title {
+  text-transform: uppercase;
+  background-color: map-get($md-cfprimary, 50);
+}
+
+//TODO: On mobile view get the search panel to open and close...
