--- a/client/src/app/components/header-section/header-section.component.scss
+++ b/client/src/app/components/header-section/header-section.component.scss
@@ -97,12 +97,89 @@ h1 {
   margin-bottom: 5px;
 }
 
-small {
-  display: block;
-  min-width: 240px;
+h4 {
+  margin: 0;
   margin-bottom: 15px;
+}
+
+small {
+  display: flex;
+  align-items: center;
+  // min-width: 255px;
+  padding-right: 10px;
+  margin-bottom: 15px;
+  label {
+    font-size: 14px;
+    color: rgba(map-get($md-cfaccent, 500), .34);
+    margin-right: 5px;
+  }
   img {
     width: 10px;
+    margin-right: 5px;
   }
 }
 
+.user-row {
+  width: 100%;
+  box-sizing: border-box;
+  display: inline-flex;
+  padding: 20px 40px;
+  border-bottom: 1px solid map-get($md-cfaccent, 50);
+  .user-photo {
+    width: 125px;
+    height: 125px;
+    margin-right: 15px;
+  }
+  .user-detail {
+    display: inline-flex;
+    flex-direction: column;
+    flex: 1;
+    .user-info {
+      display: inline-flex;
+    }
+  }
+  .user-status {
+    min-width: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .user-row {
+    padding: 20px 20px;
+    flex-direction: column;
+    align-items: center;
+    .user-photo {
+      width: 110px;
+      height: 110px;
+    }
+    .user-detail {
+      h1, h4 {
+        text-align: center;
+      }
+    }
+    .user-status  {
+      flex-direction: row;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .user-row {
+    .user-detail {
+      .user-info {
+        flex-direction: column;
+      }
+    }
+    .user-status  {
+      flex-direction: column;
+      align-items: center;
+      img {
+        margin-top: 15px;
+      }
+    }
+  }
+}
