--- a/client/src/app/components/main-section/main-section.component.html
+++ b/client/src/app/components/main-section/main-section.component.html
@@ -1,25 +1,64 @@
-<ng-container> 
-  <div class="row">
-    <h3> About Company </h3>
-    <p>Brand Studio is a passionate team of creative thinkers and marketers. We protect and promote Google’s brand and reputation through programs, products and narrative experiences that express Google’s values in action across the world. As part of our team, you’ll define and create the visual and strategic elements that comprise Google’s brand and product identities.</p>
+<ng-container *ngIf="selectedNavMenu === 'profile'">
+
+  <div *ngIf="userGeneralInfo && userGeneralInfo.user_intro" class="row">
+    <h3> About Me </h3>
+    <p>{{userGeneralInfo.user_intro}}</p>
+  </div>
+  <div *ngIf="educationList" class="row">
+    <h3> Education </h3>
+    <ng-container *ngIf="educationList.length > 0">
+      <ng-container *ngFor="let education of educationList"></ng-container>
+
+    </ng-container>
+  </div>
+
+  <div *ngIf="experienceList" class="row">
+    <h3> Work Experience </h3>
+    <ng-container *ngIf="experienceList.length > 0">
+      <ng-container *ngFor="let experience of experienceList"></ng-container>
+      
+    </ng-container>
+  </div>
+  <div *ngIf="userPublicationsList" class="row">
+    <h3> Publications </h3>
+    <ng-container *ngIf="userPublicationsList.length > 0">
+      <ng-container *ngFor="let publication of userPublicationsList"></ng-container>
+      
+    </ng-container>
+  </div>
+  <div *ngIf="userProjectsList" class="row">
+    <h3> Projects </h3>
+    <ng-container *ngIf="userProjectsList.length > 0">
+      <ng-container *ngFor="let roject of userProjectsList"></ng-container>
+      
+    </ng-container>
+  </div>
+  <div *ngIf="userSkillsList" class="row">
+    <h3> Skills </h3>
+    <ng-container *ngIf="userSkillsList.length > 0">
+      <ng-container *ngFor="let skill of userSkillsList"></ng-container>
+      
+    </ng-container>
+  </div>
+  <div *ngIf="userInterestsList" class="row">
+    <h3> Interests </h3>
+    <ng-container *ngIf="userInterestsList.length > 0">
+      <ng-container *ngFor="let interest of userInterestsList"></ng-container>
+      
+    </ng-container>
   </div>
   <div class="row">
-    <h3> Company Industry </h3>
-    <p> Primary Industry 1</p>
-    <simple-tag type="gray" title="Information Technology"></simple-tag>
-    <p> Primary Industry 3</p>
-    <simple-tag type="gray" title="Administration"></simple-tag>
-    <simple-tag type="gray" title="Machine Learning"></simple-tag>
-    <simple-tag type="gray" title="Human Resources"></simple-tag>
+    <h3> Activities </h3>
   </div>
   <div class="row">
+    <h3> Recommendation </h3>
+  </div>
+  <div *ngIf="externalResourcesList" class="row">
     <h3> External Resources </h3>
-    <action-button type="stroked" title="Linkedin"></action-button>
-    <action-button type="stroked" title="Facebook"></action-button>
-  </div>
-  <div class="row">
-    <h3> Terms and Conditions </h3>
-    <p>Brand Studio is a passionate team of creative thinkers and marketers. We protect and promote Google’s brand and reputation through programs, products and narrative experiences that express Google’s values in action across the world. As part of our team, you’ll define and create the visual and strategic elements that comprise Google’s brand and product identities.</p>
+    <ng-container *ngIf="externalResourcesList.length > 0">
+      <ng-container *ngFor="let resource of externalResourcesList"></ng-container>
+      
+    </ng-container>
   </div>
 </ng-container>
 
