--- a/client/src/app/pages/profile/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.scss
@@ -237,7 +237,11 @@ p {
           width: 20%;
           max-width: 125px;
           img {
-            width: 100%;
+            cursor: pointer;
+            width: 125px;
+            height: 125px;
+            border-radius: 50%;
+            object-fit: cover;
           }
         }
         &__field {
