--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -212,6 +212,7 @@ $btn-radius: 28pt;
 $container-max-width: 1365px;
 
 $mat-form-bg-color: #ecf3fc;
+$secondary-bg-color: #f5f8fa;
 $mat-form-border-color: #dae4f1;
 $mat-form-prefix-color: #525252;
 
