--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -10,7 +10,7 @@
   ;
   grid-column-gap: 40px;
   padding-bottom: 80px;
-  background-color: map-get($md-cfprimary, 50);
+  background-color: $secondary-bg-color;
   min-height: calc(100vh - 70px - 80px);
 }
 
@@ -31,7 +31,6 @@ legend {
 
 .section-title {
   text-transform: uppercase;
-  background-color: map-get($md-cfprimary, 50);
 }
 
 //TODO: On mobile view get the search panel to open and close...
