Add helper service
- convert date string to formatted string
- short description

--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -19,7 +19,7 @@
           </small>
           <small *ngIf="userGeneralInfo.birthdate">
             <img src="assets/icons/ic_birthday-cake.svg">
-            {{extractDate(userGeneralInfo.birthdate)}}
+            {{helperService.convertToFormattedString(userGeneralInfo.birthdate, 'll')}}
           </small>
           <small *ngIf="userGeneralInfo.gender">
             <img src="{{userGeneralInfo.gender === 'Male' ? 'assets/icons/ic_male.svg' : 'assets/icons/ic_female.svg'}}">
