--- a/client/src/app/components/nav-section/nav-section.component.scss
+++ b/client/src/app/components/nav-section/nav-section.component.scss
@@ -20,6 +20,10 @@
       display: none;
       li {
         margin-bottom: 10px;
+        &:hover {
+          color: map-get($md-cfprimary, 500);
+          cursor: pointer;
+        }
       }
     }
     mat-icon {
