Add GPA input in Education form

--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -245,6 +245,12 @@
               </mat-datepicker>
             </mat-form-field>
           </div>
+          <div class="profile-form__field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>GPA</mat-label>
+              <input matInput placeholder="GPA" formControlName="gpa" type="text">
+            </mat-form-field>
+          </div>
           <div class="profile-form__field textarea">
             <mat-form-field>
               <textarea matInput placeholder="Description (Optional)" rows="3" formControlName="description"></textarea>
