Fix CAR-327 - Remove "Drop Resume Here" element since it will not be available at launch

--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -9,6 +9,7 @@
   </div>
   
   <!-- Create_Profile_Choose start -->
+  <!-- "Drop Resume Here" feature won't be available at launch. -->
   
   <div *ngIf="selectedPageIndex===0" class="container {{profileCreationPages[0]}}">
     <div class="container__full">
