Adding main toolbar

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-toolbar></app-toolbar>
-<router-outlet></router-outlet>
-<alert-bar></alert-bar>
+<main-toolbar>
+    <router-outlet></router-outlet>
+    <alert-bar></alert-bar>
+</main-toolbar>
