Update profile info page
- Add title parameter in general information form
- Hide navigation menu for empty data

--- a/client/src/app/components/nav-section/nav-section.component.html
+++ b/client/src/app/components/nav-section/nav-section.component.html
@@ -4,7 +4,9 @@
     <h3 (click)="onSelectNavMenu(i)">{{menu.title}}</h3>
     <mat-icon>keyboard_arrow_right</mat-icon>
     <ol *ngIf="menu.items.length > 0">
-      <li *ngFor="let item of menu.items">{{item}}</li>
+      <ng-container *ngFor="let item of menu.items">
+        <li *ngIf="item.visible">{{item.title}}</li>
+      </ng-container>
     </ol>
   </nav>
 </ng-container>
