--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -9,7 +9,7 @@
     <div class="user-detail">
       <div>
         <h1>{{userGeneralInfo.first_name}} {{userGeneralInfo.last_name}}</h1>
-        <h4>Sr. SoftWare Engineer</h4>
+        <h4>{{userGeneralInfo.title}}</h4>
       </div>
       <div class="user-info">
         <div>
