--- a/client/src/app/components/main-section/main-section.component.html
+++ b/client/src/app/components/main-section/main-section.component.html
@@ -8,102 +8,90 @@
     </ng-container>
   </div>
 
-  <div *ngIf="educationList" class="row">
+  <div *ngIf="educationList && educationList.length > 0" class="row">
     <h3> Education </h3>
-    <ng-container *ngIf="educationList.length > 0">
-      <ng-container *ngFor="let education of educationList; let i = index">
-        <mat-divider *ngIf="i > 0"></mat-divider>
-        <a href="/my-profile">{{education.user_specified_school_name ? education.user_specified_school_name : education.school_name}}</a>
-        <h4>{{education.education_level}} - {{education.major_name}}</h4>
-        <small>{{helperService.convertToFormattedString(education.start_date, 'YYYY')}} - {{helperService.convertToFormattedString(education.graduation_date, 'YYYY')}}</small>
-        <ng-container *ngIf="true; let short_desc">
-          <p *ngIf="education.edu_desc" [class.short-desc]="short_desc && education.edu_desc.length > helperService.shortDescLength">
-            {{short_desc ? helperService.shortDescription(education.edu_desc) : education.edu_desc}}
-          </p>
-          <a *ngIf="short_desc && education.edu_desc && short_desc && education.edu_desc.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
-        </ng-container>
+    <ng-container *ngFor="let education of educationList; let i = index">
+      <mat-divider *ngIf="i > 0"></mat-divider>
+      <a href="/my-profile">{{education.user_specified_school_name ? education.user_specified_school_name : education.school_name}}</a>
+      <h4>{{education.education_level}} - {{education.major_name}}</h4>
+      <small>{{helperService.convertToFormattedString(education.start_date, 'YYYY')}} - {{helperService.convertToFormattedString(education.graduation_date, 'YYYY')}}</small>
+      <ng-container *ngIf="true; let short_desc">
+        <p *ngIf="education.edu_desc" [class.short-desc]="short_desc && education.edu_desc.length > helperService.shortDescLength">
+          {{short_desc ? helperService.shortDescription(education.edu_desc) : education.edu_desc}}
+        </p>
+        <a *ngIf="short_desc && education.edu_desc && short_desc && education.edu_desc.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
       </ng-container>
     </ng-container>
   </div>
 
-  <div *ngIf="experienceList" class="row">
+  <div *ngIf="experienceList && experienceList.length > 0" class="row">
     <h3> Work Experience </h3>
-    <ng-container *ngIf="experienceList.length > 0">
-      <ng-container *ngFor="let experience of experienceList; let i = inde;">
-        <mat-divider *ngIf="i > 0"></mat-divider>
-        <a href="/my-profile">{{experience.user_specified_company_name ? experience.user_specified_company_name : experience.company_name}}</a>
-        <h4>{{experience.job}}</h4>
-        <small>{{helperService.convertToFormattedString(experience.start_date, 'MMM, YYYY')}} - {{(experience.end_date ? helperService.convertToFormattedString(experience.end_date, 'MMM, YYYY') : 'Present')}}</small>
-        <ng-container *ngIf="true; let short_desc">
-          <p *ngIf="experience.job_desc" [class.short-desc]="short_desc && experience.job_desc.length > helperService.shortDescLength">
-            {{short_desc ? helperService.shortDescription(experience.job_desc ) : experience.job_desc }}
-          </p>
-          <a *ngIf="short_desc && experience.job_desc && experience.job_desc.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
-        </ng-container>
-        <ng-container *ngIf="experience.skills_trained && experience.skills_trained.length > 0">
-          <h5>Skills Trained {{experience.skills_trained.length}}</h5>
-          <simple-tag *ngFor="let skill_trained of experience.skills_trained" type="gray" title="{{skill_trained.skill}}"></simple-tag>
-        </ng-container>
-        <ng-container *ngIf="experience.industries && experience.industries.length > 0">
-          <h5>Company Industries {{experience.industries.length}}</h5>
-          <simple-tag *ngFor="let industry of experience.industries" type="gray" title="{{industry.industry_name}}"></simple-tag>
-        </ng-container>
-        <ng-container *ngIf="experience.add_industries && experience.add_industries.length > 0">
-          <h5>Additional Industry Exposure {{experience.add_industries.length}}</h5>
-          <simple-tag *ngFor="let add_industry of experience.add_industries" type="gray" title="{{add_industry.industry_name}}"></simple-tag>
-        </ng-container>
+    <ng-container *ngFor="let experience of experienceList; let i = inde;">
+      <mat-divider *ngIf="i > 0"></mat-divider>
+      <a href="/my-profile">{{experience.user_specified_company_name ? experience.user_specified_company_name : experience.company_name}}</a>
+      <h4>{{experience.job}}</h4>
+      <small>{{helperService.convertToFormattedString(experience.start_date, 'MMM, YYYY')}} - {{(experience.end_date ? helperService.convertToFormattedString(experience.end_date, 'MMM, YYYY') : 'Present')}}</small>
+      <ng-container *ngIf="true; let short_desc">
+        <p *ngIf="experience.job_desc" [class.short-desc]="short_desc && experience.job_desc.length > helperService.shortDescLength">
+          {{short_desc ? helperService.shortDescription(experience.job_desc ) : experience.job_desc }}
+        </p>
+        <a *ngIf="short_desc && experience.job_desc && experience.job_desc.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
+      </ng-container>
+      <ng-container *ngIf="experience.skills_trained && experience.skills_trained.length > 0">
+        <h5>Skills Trained {{experience.skills_trained.length}}</h5>
+        <simple-tag *ngFor="let skill_trained of experience.skills_trained" type="gray" title="{{skill_trained.skill}}"></simple-tag>
+      </ng-container>
+      <ng-container *ngIf="experience.industries && experience.industries.length > 0">
+        <h5>Company Industries {{experience.industries.length}}</h5>
+        <simple-tag *ngFor="let industry of experience.industries" type="gray" title="{{industry.industry_name}}"></simple-tag>
+      </ng-container>
+      <ng-container *ngIf="experience.add_industries && experience.add_industries.length > 0">
+        <h5>Additional Industry Exposure {{experience.add_industries.length}}</h5>
+        <simple-tag *ngFor="let add_industry of experience.add_industries" type="gray" title="{{add_industry.industry_name}}"></simple-tag>
       </ng-container>
     </ng-container>
   </div>
 
-  <div *ngIf="userPublicationsList" class="row">
+  <div *ngIf="userPublicationsList && userPublicationsList.length > 0" class="row">
     <h3> Publications </h3>
-    <ng-container *ngIf="userPublicationsList.length > 0">
-      <ng-container *ngFor="let publication of userPublicationsList; let i = index">
-        <mat-divider *ngIf="i > 0"></mat-divider>
-        <h4>{{publication.publication_title}}</h4>
-        <small *ngIf="publication.date_published">Published on {{helperService.convertToFormattedString(publication.date_published, 'll')}}</small>
-        <ng-container *ngIf="true; let short_desc">
-          <p *ngIf="publication.description" [class.short-desc]="short_desc && publication.description.length > helperService.shortDescLength">
-            {{short_desc ? helperService.shortDescription(publication.description) : publication.description}}
-          </p>
-          <a *ngIf="short_desc && publication.description && publication.description.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
-        </ng-container>
+    <ng-container *ngFor="let publication of userPublicationsList; let i = index">
+      <mat-divider *ngIf="i > 0"></mat-divider>
+      <h4>{{publication.publication_title}}</h4>
+      <small *ngIf="publication.date_published">Published on {{helperService.convertToFormattedString(publication.date_published, 'll')}}</small>
+      <ng-container *ngIf="true; let short_desc">
+        <p *ngIf="publication.description" [class.short-desc]="short_desc && publication.description.length > helperService.shortDescLength">
+          {{short_desc ? helperService.shortDescription(publication.description) : publication.description}}
+        </p>
+        <a *ngIf="short_desc && publication.description && publication.description.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
       </ng-container>
     </ng-container>
   </div>
 
-  <div *ngIf="userProjectsList" class="row">
+  <div *ngIf="userProjectsList && userProjectsList.length > 0" class="row">
     <h3> Projects </h3>
-    <ng-container *ngIf="userProjectsList.length > 0">
-      <ng-container *ngFor="let project of userProjectsList">
-        <mat-divider *ngIf="i > 0"></mat-divider>
-        <h4>{{project.project_name}}</h4>
-        <small *ngIf="project.date_finished">Completed on {{helperService.convertToFormattedString(project.date_finished, 'll')}}</small>
-        <ng-container *ngIf="true; let short_desc">
-          <p *ngIf="project.description" [class.short-desc]="short_desc && project.description.length > helperService.shortDescLength">
-            {{short_desc ? helperService.shortDescription(project.description) : project.description}}
-          </p>
-          <a *ngIf="short_desc && project.description && project.description.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
-        </ng-container>
+    <ng-container *ngFor="let project of userProjectsList">
+      <mat-divider *ngIf="i > 0"></mat-divider>
+      <h4>{{project.project_name}}</h4>
+      <small *ngIf="project.date_finished">Completed on {{helperService.convertToFormattedString(project.date_finished, 'll')}}</small>
+      <ng-container *ngIf="true; let short_desc">
+        <p *ngIf="project.description" [class.short-desc]="short_desc && project.description.length > helperService.shortDescLength">
+          {{short_desc ? helperService.shortDescription(project.description) : project.description}}
+        </p>
+        <a *ngIf="short_desc && project.description && project.description.length > helperService.shortDescLength" (click)="short_desc = false">Read More</a>
       </ng-container>
     </ng-container>
   </div>
 
-  <div *ngIf="userSkillsList" class="row">
+  <div *ngIf="userSkillsList && userSkillsList.length > 0" class="row">
     <h3> Skills </h3>
-    <ng-container *ngIf="userSkillsList.length > 0">
-      <h5>Skills {{userSkillsList.length}}</h5>
-      <simple-tag *ngFor="let skill of userSkillsList" type="gray" title="{{skill.skill}}" ellipseTag="true" value="{{skill.skill_level}}"></simple-tag>
-    </ng-container>
+    <h5>Skills {{userSkillsList.length}}</h5>
+    <simple-tag *ngFor="let skill of userSkillsList" type="gray" title="{{skill.skill}}" ellipseTag="true" value="{{skill.skill_level}}"></simple-tag>
   </div>
 
-  <div *ngIf="userInterestsList" class="row">
+  <div *ngIf="userInterestsList && userInterestsList.length > 0" class="row">
     <h3> Interests </h3>
-    <ng-container *ngIf="userInterestsList.length > 0">
-      <h5>Skills {{userInterestsList.length}}</h5>
-      <simple-tag *ngFor="let interest of userInterestsList" type="gray" title="{{interest.interest}}"></simple-tag>
-    </ng-container>
+    <h5>Skills {{userInterestsList.length}}</h5>
+    <simple-tag *ngFor="let interest of userInterestsList" type="gray" title="{{interest.interest}}"></simple-tag>
   </div>
   <div class="row">
     <h3> Activities </h3>
@@ -120,9 +108,9 @@
     <p>Worked with a team of five other people, three designers, and one other programmer, to design and create a functional web application for STEM Kids NY that distributed educational materials to underprivileged individuals interested in STEM.</p>
   </div>
 
-  <div *ngIf="externalResourcesList" class="row">
+  <div *ngIf="externalResourcesList && externalResourcesList.length > 0" class="row">
     <h3> External Resources </h3>
-    <div *ngIf="externalResourcesList.length > 0">
+    <div>
       <div class="img-tag" *ngFor="let resource of externalResourcesList">
         <img src="assets/icons/ic_{{resource.description.toLowerCase()}}_white.svg">
         <label>{{resource.description}}</label>
