--- a/client/src/app/pages/authentication/registration/registration.component.scss
+++ b/client/src/app/pages/authentication/registration/registration.component.scss
@@ -1,4 +1,4 @@
-@import './../../../styles/variables.scss';
+@import '../../../../styles/variables';
 
 $primary-font-color: map-get($md-cfaccent, 500);
 
