--- a/client/src/app/pages/authentication/verification/verification.component.scss
+++ b/client/src/app/pages/authentication/verification/verification.component.scss
@@ -1,4 +1,4 @@
-@import './../../../styles/variables.scss';
+@import '../../../../styles/variables';
 
 :host {
   @include flex(row, center, center);
